[gd_scene format=3 uid="uid://igt3rpjquvqw"]

[ext_resource type="Script" uid="uid://dpon2wfyckafb" path="res://MainMenu/main_menu.gd" id="1_b76km"]

[node name="MainMenu" type="Control" unique_id=160709170]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b76km")

[node name="BalloonPopperButton" type="MenuButton" parent="." unique_id=1045338914]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.007
anchor_bottom = 0.012
offset_left = 448.0
offset_top = 128.0
offset_right = 631.936
offset_bottom = 184.224
toggle_mode = false
text = "BALLOON POPPER"

[node name="PhysicsButton" type="MenuButton" parent="." unique_id=1067365853]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.007
anchor_bottom = 0.012
offset_left = 448.0
offset_top = 256.0
offset_right = 631.936
offset_bottom = 312.224
toggle_mode = false
text = "PHYSICS"

[node name="CollisionButton" type="MenuButton" parent="." unique_id=2094451196]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.007
anchor_bottom = 0.012
offset_left = 450.0
offset_top = 383.0
offset_right = 633.936
offset_bottom = 439.224
toggle_mode = false
text = "COLLISION"

[node name="ShooterButton" type="MenuButton" parent="." unique_id=453380336]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.007
anchor_bottom = 0.012
offset_left = 449.0
offset_top = 486.0
offset_right = 632.936
offset_bottom = 542.224
toggle_mode = false
text = "SHOOTER"

[connection signal="pressed" from="BalloonPopperButton" to="." method="_on_balloon_popper_button_pressed"]
[connection signal="pressed" from="PhysicsButton" to="." method="_on_physics_button_pressed"]
[connection signal="pressed" from="CollisionButton" to="." method="_on_collision_button_pressed"]
[connection signal="pressed" from="ShooterButton" to="." method="_on_shooter_button_pressed"]
